01 September 2010

* Detect GMail's XYZZY capability for IMAP and use it to try and workaround
  some of their broken behaviour (incorrectly reported message sizes).

31 May 2009

* Print a warning on missing maildirs when fetching from them rather than
  crashing or giving an error. Reported by Frank Terbeck.

17 May 2009

* Introduce a configure script and tidy up build infrastructure.

02 May 2009

* GMail IMAP doesn't correctly set the \Seen flag after UID FETCH BODY[], so
  explicitly set it with STORE when mail is kept. Reported by Patrice Clement.

30 April 2009

* Properly count mails when polling multiple folders on a single IMAP server,
  reported by Claudio M. Alessi.

24 March 2009

* Support user and pass on NNTP, requested by Michael Hamann.

08 March 2009

* Escape . properly when delivering to SMTP.

27 December 2008

* Don't be as strict about format at the end of messages when using IMAP -
  accept additional information as well as FLAGS. Reported by rivo nurges.

22 December 2008

* fdm 1.6 released.

17 December 2008

* Only look at HOME environment variable if -h flag is passed.

28 October 2008

* Alter IMAP fetching code to build a UID list of mails to fetch and then fetch
  them, rather than iterating through all the mails regardless.

07 September 2008

* Process all privsep messages in parent rather than just the first.
  Fixes timeouts reported by Frank Terbeck.

08 August 2008

* Sort fetch list for POP3 to preserve server mailbox order, requested
  by Jeremy C Reed.
* Fix bug where current user could overwrite default-user/command-user
  from configuration file.

26 June 2008

* Lookup using courier-authlib. Build with make -DLOOKUP_COURIER and
  use "set lookup-order courier passwd".
* Framework for changing user lookup method. At the moment only normal
  Unix passwd (getpwnam(3)) is supported. This means only string
  usernames are supported - to enter a numeric Unix UID, enclose it
  in quotes.