@@ -1,4 +1,4 @@
-.\" $Id: fdm.conf.5,v 1.103 2010-01-28 19:28:52 nicm Exp $
+.\" $Id: fdm.conf.5,v 1.104 2011-05-08 20:51:02 nicm Exp $
 .\"
 .\" Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
 .\"
@@ -520,6 +520,9 @@ This allows
 .Xr fdm 1
 to be used to filter mail, fetching from a maildir and deleting (dropping)
 unwanted mail, or delivering mail to another maildir or to an mbox.
+.Pp
+Mail fetched from a maildir is tagged with a maildir tag containing
+the basename of the mail file.
 .It Ic mbox Ar path
 .It Xo Ic mboxes
 .Li {
@@ -533,6 +536,9 @@ and
 but cause
 .Xr fdm 1
 to fetch mail from an mbox or set of mboxes.
+.Pp
+Mail fetched from a mbox is tagged with a mbox tag containing the
+basename of the mbox file.
 .It Xo Ic nntp Ic server Ar host
 .Op Ic port Ar port
 .Op Ar userpass
